--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.33.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.18.1",
